--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,22 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@rainbow-me/rainbowkit": "^0.8.1",
-    "ethers": "^5.7.2",
-    "next": "13.0.0",
+    "@web3modal/wagmi": "^3.4.0",
+    "lokijs": "^1.5.12",
+    "pino-pretty": "^10.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*",
-    "wagmi": "^0.10.10"
+    "viem": "^1.19.11",
+    "wagmi": "^1.4.7"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.20.12",
+    "@babel/preset-env": "^7.23.5",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
+    "autoprefixer": "^10.4.16",
     "eslint": "7.32.0",
     "eslint-config-custom": "workspace:*",
+    "next": "14.0.3",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6",
     "tsconfig": "workspace:*",
-    "typescript": "^4.5.3"
+    "typescript": "^5.3.2"
   }
 }
