--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@web3modal/wagmi": "^3.4.0",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "lokijs": "^1.5.12",
     "pino-pretty": "^10.2.3",
     "react": "18.2.0",
@@ -25,8 +26,10 @@
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
-    "eslint": "7.32.0",
+    "eslint": "^8",
     "eslint-config-custom": "workspace:*",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "next": "14.0.3",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6",
