--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web3modal/wagmi": "^3.4.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@web3modal/wagmi": "^3.4.0",
     "lokijs": "^1.5.12",
+    "next-themes": "^0.2.1",
     "pino-pretty": "^10.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,10 +29,10 @@
     "autoprefixer": "^10.4.16",
     "eslint": "^8",
     "eslint-config-custom": "workspace:*",
-    "prettier": "^3.1.0",
-    "prettier-plugin-tailwindcss": "^0.5.7",
     "next": "14.0.3",
     "postcss": "^8.4.32",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.6",
     "tsconfig": "workspace:*",
     "typescript": "^5.3.2"
