--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@web3modal/wagmi": "^3.4.0",
+    "heroicons-react": "^1.4.1",
     "lokijs": "^1.5.12",
     "next-themes": "^0.2.1",
     "pino-pretty": "^10.2.3",
