--- a/foundry.toml
+++ b/foundry.toml
@@ -1,9 +1,13 @@
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#default-profile
 [profile.default]
+solc-version = "0.8.19"
 src = 'pkg/contracts/src'
 test = 'pkg/contracts/test'
 out = 'pkg/contracts/out'
 libs = ['lib']
+
+optimizer = true
+optimizer-runs = 1_000
 
 # auto_detect_remappings = true # recursive auto-detection of remappings
 # remappings = []
