--- a/foundry.toml
+++ b/foundry.toml
@@ -48,7 +48,7 @@ optimizer-runs = 1_000
 # # ignore solc warnings for missing license and exceeded contract size
 # # known error codes are: ["unreachable", "unused-return", "unused-param", "unused-var", "code-size", "shadowing", "func-mutability", "license", "pragma-solidity", "virtual-interfaces", "same-varname"]
 # # additional warnings can be added using their numeric error code: ["license", 1337]
-# ignored_error_codes = ["license", "code-size"]
+# ignored_error_codes = [9553,9574]
 # deny_warnings = false
 # match_test = "Foo"
 # no_match_test = "Bar"
