--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@web3modal/wagmi": "^3.4.0",
     "heroicons-react": "^1.4.1",
     "lokijs": "^1.5.12",
@@ -24,12 +24,20 @@
   "devDependencies": {
     "@babel/core": "^7.20.12",
     "@babel/preset-env": "^7.23.5",
+    "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.55.0",
     "eslint-config-custom": "workspace:*",
+    "eslint-config-next": "13.0.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-html": "^7.1.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-prettier": "^5.0.1",
+    "eslint-plugin-react": "^7.33.2",
     "next": "14.0.3",
     "postcss": "^8.4.32",
     "prettier": "^3.1.0",
