--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.1.1",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@urql/next": "^1.1.0",
     "@web3modal/wagmi": "^3.4.0",
@@ -33,6 +35,7 @@
     "@types/react-dom": "^18.0.7",
     "autoprefixer": "^10.4.16",
     "babel-eslint": "^10.1.0",
+    "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
     "eslint-config-custom": "workspace:*",
     "eslint-config-next": "13.0.0",
@@ -46,7 +49,6 @@
     "prettier": "^3.1.0",
     "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.3.6",
-    "daisyui": "^4.4.20",
     "tsconfig": "workspace:*",
     "typescript": "^5.3.2"
   }
