:rotating_light: try fix web linter

--- a/package.json
+++ b/package.json
@@ -16,11 +16,10 @@
   "devDependencies": {
     "eslint-config-custom": "workspace:*",
     "prettier": "latest",
-    "turbo": "latest"
+    "turbo": "^1.7.4"
   },
   "engines": {
     "node": ">=14.0.0"
   },
-  "dependencies": {},
   "packageManager": "pnpm@7.16.1"
 }
