:rotating_light: skip web:build :bug: created correct InitializedCV event :bug: fix subgraph

--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -19,6 +19,6 @@ dataSources:
               - name: CVStrategy
                 file: ../contracts/out/CVStrategy.sol/CVStrategy.json
           eventHandlers:
-              - event: Test()
-                handler: handleTest
+              - event: InitializedCV(uint256,bytes)
+                handler: handleInitialized
           file: ./src/mapping.ts
