--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "solidity.packageDefaultDependenciesContractsDirectory": "pkg/contracts/src",
   "solidity.packageDefaultDependenciesDirectory": "lib",
   "[solidity]": {
-    "editor.defaultFormatter": "JuanBlanco.solidity",
+    "editor.defaultFormatter": "NomicFoundation.hardhat-solidity",
     "editor.formatOnSave": true
   },
   "solidity.formatter": "forge",
