--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "generate": "wagmi generate",
     "dev": "next dev",
     "build_": "next build",
     "start": "next start",
