--- a/pkg/contracts/package.json
+++ b/pkg/contracts/package.json
@@ -3,10 +3,10 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "anvil",
+    "dev": "make deploy",
+    "fork": "make fork",
     "build": "forge build --sizes",
     "lint": "forge fmt",
-    "test": "forge test -vvv",
-    "deploy": "forge script script/Counter.s.sol --rpc-url http://localhost:8545 --broadcast"
+    "test": "forge test -vvv"
   }
 }
