:bug: forge build before generate types

--- a/turbo.json
+++ b/turbo.json
@@ -51,6 +51,9 @@
       "cache": false
     },
     "web#generate": {
+      "dependsOn": [
+        "foundry#build"
+      ],
       "cache": false
     },
     "subgraph#build": {
