:bug: turbo web build depends on foundry

--- a/turbo.json
+++ b/turbo.json
@@ -56,6 +56,12 @@
       ],
       "cache": false
     },
+    "web#build": {
+      "dependsOn": [
+        "foundry#build"
+      ],
+      "cache": false
+    },
     "subgraph#build": {
       "dependsOn": [
         "foundry#build"
