--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@allo-team/allo-v2-sdk": "^1.0.34",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
     "@urql/next": "^1.1.0",
@@ -30,15 +31,15 @@
     "@babel/core": "^7.20.12",
     "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.23.5",
-    "@typescript-eslint/typescript-estree": "^6.17.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^17.0.12",
     "@types/react": "^18.0.22",
     "@types/react-dom": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "^6.18.0",
-    "autoprefixer": "^10.4.16",
+    "@typescript-eslint/typescript-estree": "^6.17.0",
     "@wagmi/cli": "2.0.0-rc.3",
+    "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
     "eslint-config-custom": "workspace:*",
