--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "engines": {
     "node": ">=18.17.0"
   },
+  "resolutions": {
+    "@typescript-eslint/parser": "6.18.2-alpha.2"
+  },
   "packageManager": "pnpm@7.16.1"
 }
