feat: proposals component

--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ cache/
 # Ignores development broadcast logs
 !broadcast
 broadcast/*/31337/
+broadcast/*/1337/
 broadcast/**/1/
 broadcast/**/dry-run/
 
