:zap: improv in contract and tests :sparkles: wip implementation activate points per pool/strategy

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -23,8 +23,8 @@ deploy-testnet:
 	
 fork:
 	anvil
-
-# anvil --host=0.0.0.0 -f $(RPC_URL)
+fork-testnet:
+	anvil --host=0.0.0.0 -f $(RPC_URL_ARB_TESTNET)
 test1:
 	forge test --fork-url $(RPC_URL_LOCALHOST) --mc CVStrategyTest \ 
 	--sender 0xf39fd6e51aad88f6f4ce6ab8827279cfffb92266 -vv
