--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -38,7 +38,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "6.18.2-alpha.2",
     "@typescript-eslint/typescript-estree": "^6.17.0",
-    "@wagmi/cli": "2.0.0-rc.3",
+    "@wagmi/cli": "1.5.2",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
