:bug: force web genereate in build

--- a/turbo.json
+++ b/turbo.json
@@ -11,7 +11,8 @@
     },
     "build": {
       "dependsOn": [
-        "^build"
+        "^build",
+        "web#generate"
       ],
       "outputs": [
         "dist/**",
