--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,7 +13,10 @@
     "@allo-team/allo-v2-sdk": "^1.0.34",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
+    "@tanstack/react-query": "^5.17.15",
     "@urql/next": "^1.1.0",
+    "@wagmi/connectors": "^4.1.4",
+    "@wagmi/core": "^2.2.1",
     "@web3modal/wagmi": "^3.5.3",
     "graphql": "^16.8.1",
     "heroicons-react": "^1.4.1",
@@ -24,8 +27,8 @@
     "react-dom": "18.2.0",
     "ui": "workspace:*",
     "urql": "^4.0.6",
-    "viem": "^1.21.1",
-    "wagmi": "^1.4.12"
+    "viem": "2.x",
+    "wagmi": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -38,7 +41,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "6.18.2-alpha.2",
     "@typescript-eslint/typescript-estree": "^6.17.0",
-    "@wagmi/cli": "1.5.2",
+    "@wagmi/cli": "^2.0.4",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
