--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,10 +13,19 @@
     "@allo-team/allo-v2-sdk": "^1.0.34",
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.1.1",
-    "@tanstack/react-query": "^5.17.15",
+    "@tanstack/react-query": "^5.17.19",
     "@urql/next": "^1.1.0",
-    "@wagmi/connectors": "^4.1.4",
-    "@wagmi/core": "^2.2.1",
+    "@wagmi/connectors": "^4.1.6",
+    "@wagmi/core": "^2.3.1",
+    "@web3-onboard/coinbase": "^2.2.6",
+    "@web3-onboard/core": "^2.21.2",
+    "@web3-onboard/gnosis": "^2.2.1",
+    "@web3-onboard/injected-wallets": "^2.10.11",
+    "@web3-onboard/ledger": "^2.5.2",
+    "@web3-onboard/react": "^2.8.13",
+    "@web3-onboard/trezor": "^2.4.3",
+    "@web3-onboard/walletconnect": "^2.5.3",
+    "@web3-onboard/web3auth": "^2.2.3",
     "@web3modal/wagmi": "^3.5.3",
     "graphql": "^16.8.1",
     "heroicons-react": "^1.4.1",
@@ -27,8 +36,8 @@
     "react-dom": "18.2.0",
     "ui": "workspace:*",
     "urql": "^4.0.6",
-    "viem": "2.x",
-    "wagmi": "^2.2.1"
+    "viem": "^2.4.0",
+    "wagmi": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -41,7 +50,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "6.18.2-alpha.2",
     "@typescript-eslint/typescript-estree": "^6.17.0",
-    "@wagmi/cli": "^2.0.4",
+    "@wagmi/cli": "2.0.4",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
