fix: docs packages, web3OnBoard, themeButton

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,20 +15,21 @@
     "@heroicons/react": "^2.1.1",
     "@tanstack/react-query": "^5.17.19",
     "@urql/next": "^1.1.0",
-    "@wagmi/connectors": "^4.1.6",
+    "@wagmi/connectors": "^4.1.8",
     "@wagmi/core": "^2.3.1",
     "@web3-onboard/coinbase": "^2.2.6",
     "@web3-onboard/core": "^2.21.2",
+    "@web3-onboard/frame": "^2.0.2",
     "@web3-onboard/gnosis": "^2.2.1",
     "@web3-onboard/injected-wallets": "^2.10.11",
     "@web3-onboard/ledger": "^2.5.2",
+    "@web3-onboard/metamask": "^2.0.2",
     "@web3-onboard/react": "^2.8.13",
     "@web3-onboard/trezor": "^2.4.3",
+    "@web3-onboard/trust": "^2.0.4",
     "@web3-onboard/walletconnect": "^2.5.3",
     "@web3-onboard/web3auth": "^2.2.3",
-    "@web3modal/wagmi": "^3.5.3",
     "graphql": "^16.8.1",
-    "heroicons-react": "^1.4.1",
     "lokijs": "^1.5.12",
     "next-themes": "^0.2.1",
     "pino-pretty": "^10.2.3",
