--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*",
+    "urql": "^4.0.6",
     "wagmi": "~1",
     "@wagmi/core": "~1",
     "viem": "~1"
