--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -27,6 +27,8 @@
     "urql": "^4.0.6",
     "wagmi": "~1",
     "@wagmi/core": "~1",
+    "echarts": "^5.4.2",
+    "echarts-for-react": "^3.0.2",
     "viem": "~1"
   },
   "devDependencies": {
