--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@rainbow-me/rainbowkit": "^1.3.3",
     "@tanstack/react-query": "^5.17.19",
     "@urql/next": "^1.1.0",
+    "@wagmi/core": "~1",
     "classnames": "^2.5.1",
     "graphql": "^16.8.1",
     "lokijs": "^1.5.12",
@@ -25,9 +26,8 @@
     "react-dom": "18.2.0",
     "ui": "workspace:*",
     "urql": "^4.0.6",
-    "wagmi": "~1",
-    "@wagmi/core": "~1",
-    "viem": "~1"
+    "viem": "~1",
+    "wagmi": "~1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
@@ -40,7 +40,7 @@
     "@typescript-eslint/eslint-plugin": "^6.18.0",
     "@typescript-eslint/parser": "6.18.2-alpha.2",
     "@typescript-eslint/typescript-estree": "^6.17.0",
-    "@wagmi/cli": "2.1.0",
+    "@wagmi/cli": "1.5.2",
     "autoprefixer": "^10.4.16",
     "daisyui": "^4.4.20",
     "eslint": "^8.55.0",
