:sparkles: update subgraph :zap: improv events :zap: makefile :zap: new deployments to arp sepolia

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -18,6 +18,19 @@
     "^~/(.*)$",
     "^[./]"
   ],
-  "importOrderParserPlugins": ["typescript", "jsx", "decorators-legacy"],
-  "importOrderTypeScriptVersion": "4.4.0"
-}
+  "importOrderParserPlugins": [
+    "typescript",
+    "jsx",
+    "decorators-legacy"
+  ],
+  "importOrderTypeScriptVersion": "4.4.0",
+  "overrides": [
+    {
+      "files": [
+        "*.yaml"
+      ],
+      "options": {
+        "bracketSpacing": false
+      }
+    }
+  }
