--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -23,10 +23,18 @@ deploy-testnet:
 	--rpc-url $(RPC_URL_ARB_TESTNET) \
 	--account pk1 \
 	--verify \
-	--broadcast -vvvv
+	--etherscan-api-key $(ETHERSCAN_API_KEY) \
+	--broadcast -vv
 	
+deploy-verify: 
+	-forge script script/DeployCVArbSepolia.s.sol:DeployCVArbSepolia \
+	--rpc-url $(RPC_URL_ARB_TESTNET) \
+	--account pk1 \
+	--verify \
+	--etherscan-api-key $(ETHERSCAN_API_KEY) \
+	-vv
 fork:
-	anvil --chain-id 1337
+	anvil --host=0.0.0.0 --chain-id 1337
 fork-testnet:
 	anvil --host=0.0.0.0 -f $(RPC_URL_ARB_TESTNET)
 test1:
