--- a/pkg/services/graph-node/docker-compose.yml
+++ b/pkg/services/graph-node/docker-compose.yml
@@ -18,23 +18,28 @@ services:
       postgres_db: graph-node
       ipfs: "ipfs:5001"
       ethereum: "localhost:http://host.docker.internal:8545"
-      GRAPH_LOG: info
+      GRAPH_LOG: debug
+      ETHEREUM_REORG_THRESHOLD: 1
+      ETHEREUM_ANCESTOR_COUNT: 1
+      GRAPH_ALLOW_NON_DETERMINISTIC_IPFS: "true"
+      GRAPH_ALLOW_NON_DETERMINISTIC_FULLTEXT_SEARCH: "true"
     extra_hosts:
       - "host.docker.internal:host-gateway"
   ipfs:
-    image: ipfs/go-ipfs:v0.10.0
+    image: ipfs/kubo:v0.14.0
     ports:
       - "5001:5001"
     volumes:
       - ./data/ipfs:/data/ipfs
   postgres:
-    image: postgres
+    image: postgres:14
     ports:
       - "5432:5432"
-    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements"]
+    command: ["postgres", "-cshared_preload_libraries=pg_stat_statements","-cmax_connections=200"]
     environment:
       POSTGRES_USER: graph-node
       POSTGRES_PASSWORD: let-me-in
       POSTGRES_DB: graph-node
+      POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     volumes:
       - ./data/postgres:/var/lib/postgresql/data
