--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -2,11 +2,14 @@
   "name": "subgraph",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "build": "graph codegen && graph build",
-    "create-local": "graph create --node http://localhost:8020/ blossom/counter",
-    "remove-local": "graph remove --node http://localhost:8020/ blossom/counter",
-    "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 blossom/counter"
+    "manifest:local": "node ./src/scripts/mustache localhost",
+    "manifest:arbsep": "node ./src/scripts/mustache arbsepolia",
+    "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
+    "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
+    "deploy-local": "pnpm manifest:local && graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.1"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.62.0",
