--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -1,24 +1,42 @@
-specVersion: 0.0.4
+specVersion: 0.0.5
+features:
+  - nonFatalErrors
 schema:
-    file: ./src/schema.graphql
+  file: ./src/schema.graphql
+templates:
+  - name: ProposalMetadata
+    kind: file/ipfs
+    mapping:
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      file: ./src/mappings/cv-strategy.ts
+      handler: handleProposalMetadata
+      entities:
+        - ProposalMetadata
+      abis:
+        - name: CVStrategy
+          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
 dataSources:
-    - kind: ethereum/contract
-      name: CVStrategy
-      network: localhost
-      source:
-          address: "0x5fbdb2315678afecb367f032d93f642f64180aa3"
-          abi: CVStrategy
-          startBlock: 1
-      mapping:
-          kind: ethereum/events
-          apiVersion: 0.0.6
-          language: wasm/assemblyscript
-          entities:
-              - CVStrategy
-          abis:
-              - name: CVStrategy
-                file: ../contracts/out/CVStrategy.sol/CVStrategy.json
-          eventHandlers:
-              - event: InitializedCV(uint256,bytes)
-                handler: handleInitialized
-          file: ./src/mapping.ts
+  - kind: ethereum/contract
+    name: CVStrategy
+    network: localhost
+    source:
+      address: "0x3aAde2dCD2Df6a8cAc689EE797591b2913658659"
+      abi: CVStrategy
+      startBlock: 0
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.7
+      language: wasm/assemblyscript
+      entities:
+        - CVStrategy
+      abis:
+        - name: CVStrategy
+          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
+      eventHandlers:
+        - event: InitializedCV(uint256,(address,uint256,uint256,uint256))
+          handler: handleInitialized
+        - event: ProposalCreated(uint256,uint256)
+          handler: handleProposalCreated
+      file: ./src/mappings/cv-strategy.ts
+
