:adhesive_bandage: remove port

--- a/pkg/contracts/Makefile
+++ b/pkg/contracts/Makefile
@@ -34,7 +34,7 @@ deploy-verify:
 	--etherscan-api-key $(ETHERSCAN_API_KEY) \
 	-vv
 fork:
-	anvil --host=0.0.0.0 --chain-id 1337
+	anvil --chain-id 1337
 fork-testnet:
 	anvil --host=0.0.0.0 -f $(RPC_URL_ARB_TESTNET)
 test1:
