--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -13,7 +13,10 @@
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.67.2",
-    "@graphprotocol/graph-ts": "^0.32.0"
+    "@graphprotocol/graph-ts": "^0.32.0",
+    "@types/node": "*",
+    "typescript": ">=2.7",
+    "node-fetch": "*"
   },
   "devDependencies": {
     "mustache": "^4.2.0"
