--- a/pkg/ui/package.json
+++ b/pkg/ui/package.json
@@ -24,6 +24,9 @@
     "react": "^18.2.0",
     "tsconfig": "workspace:*",
     "typescript": "^4.5.2",
-    "vitest": "^0.28.4"
+    "vitest": "^0.28.4",
+    "@testing-library/dom": ">=7.21.4",
+    "react-dom": "^18.0.0",
+    "vite": "^4.1.0-beta.0"
   }
 }
