:bug: fix meta plural name

--- a/pkg/subgraph/src/templates/subgraph.yaml
+++ b/pkg/subgraph/src/templates/subgraph.yaml
@@ -12,7 +12,7 @@ templates:
       file: ./src/mappings/proposalMetadata.ts
       handler: handleProposalMetadata
       entities:
-        - ProposalMetadata
+        - ProposalMeta
         - CVProposal
       abis:
         - name: CVStrategy
