--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,9 +1,5 @@
 {
-  "plugins": [
-    "@ianvs/prettier-plugin-sort-imports",
-    "prettier-plugin-tailwindcss"
-  ],
-  "tailwindConfig": "./packages/config/tailwind",
+  "plugins": [],
   "importOrder": [
     "^(react/(.*)$)|^(react$)|^(react-native(.*)$)",
     "^(next/(.*)$)|^(next$)",
