--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "pino-pretty": "^10.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.4",
     "ui": "workspace:*",
     "urql": "^4.0.6",
     "wagmi": "~1",
