--- a/pkg/subgraph/package.json
+++ b/pkg/subgraph/package.json
@@ -7,10 +7,14 @@
     "build": "pnpm manifest:local && graph codegen && graph build",
     "manifest:local": "node ./src/scripts/mustache localhost",
     "manifest:arbsep": "node ./src/scripts/mustache arbsepolia",
+    "build:arbsep": "pnpm manifest:arbsep && graph codegen && graph build",
     "create-local": "graph create --node http://localhost:8020/ kamikazebr/gv2",
     "remove-local": "graph remove --node http://localhost:8020/ kamikazebr/gv2",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 kamikazebr/gv2 -l v0.0.3",
-    "last-addr": "ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-addr.ts"
+    "deploy:arbsep": "pnpm manifest:arbsep && graph deploy --studio gv2-arbsepolia",
+    "local": "pnpm create-local && pnpm build && pnpm deploy-local",
+    "last-addr": "ts-node --esm -P ../../apps/web/tsconfig.json ./src/scripts/last-addr.ts",
+    "build-client": "graphclient build --fileType js"
   },
   "dependencies": {
     "@graphprotocol/graph-cli": "^0.67.2",
@@ -20,6 +24,8 @@
     "typescript": ">=2.7"
   },
   "devDependencies": {
+    "@graphprotocol/client-cli": "^3.0.0",
+    "graphql": "^16.8.1",
     "minimist": "^1.2.8",
     "mustache": "^4.2.0",
     "viem": "~1.21.4"
