:green_heart: CI fix turbo env

--- a/turbo.json
+++ b/turbo.json
@@ -24,6 +24,9 @@
         "out/**",
         "build/**",
         "generated/**"
+      ],
+      "env": [
+        "NEXT_PUBLIC_SUBGRAPH_URL"
       ]
     },
     "test": {
