--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pkg/*"
   ],
   "scripts": {
-    "build": "turbo run build",
+    "build": "turbo run build --cache-dir=.turbo",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "test": "turbo run test",
