:bug: disable SSG :zap: using env for build-client generation :bug: network in subgraph :fire: proposalmeta ipfs removed

--- a/pkg/subgraph/.graphclientrc.yml
+++ b/pkg/subgraph/.graphclientrc.yml
@@ -3,7 +3,7 @@ sources:
     handler:
       graphql:
         # endpoint: http://localhost:8000/subgraphs/name/kamikazebr/gv2/
-        endpoint: {env.NEXT_PUBLIC_SUBGRAPH_URL}
+        endpoint: ${SUBGRAPH_URL}
 
 documents:
   - ./src/query/factory.graphql
