--- a/pkg/subgraph/subgraph.yaml
+++ b/pkg/subgraph/subgraph.yaml
@@ -4,22 +4,9 @@ features:
 schema:
   file: ./src/schema.graphql
 templates:
-  - kind: file/ipfs
-    name: ProposalMetadata
-    mapping:
-      apiVersion: 0.0.7
-      language: wasm/assemblyscript
-      file: ./src/mappings/proposalMetadata.ts
-      handler: handleProposalMetadata
-      entities:
-        - ProposalMeta
-        - CVProposal
-      abis:
-        - name: CVStrategy
-          file: ../contracts/out/CVStrategy.sol/CVStrategy.json
   - kind: ethereum/contract
     name: CVStrategy
-    network: localhost
+    network: arbitrum-sepolia
     source:
       abi: CVStrategy
     mapping:
@@ -39,7 +26,7 @@ templates:
       file: ./src/mappings/cv-strategy.ts
   - kind: ethereum/contract
     name: RegistryCommunity
-    network: localhost
+    network: arbitrum-sepolia
     source:
       abi: RegistryCommunity
     mapping:
@@ -87,11 +74,11 @@ templates:
 dataSources:
   - kind: ethereum/contract
     name: RegistryFactory
-    network: localhost
+    network: arbitrum-sepolia
     source:
-      address: "0x5FC8d32690cc91D4c39d9d3abcBD16989F875707"
+      address: "0xA7A94292413644DE53792597E28eDEF71D02bb7a"
       abi: RegistryFactory
-      startBlock: 0
+      startBlock: 11371411
     mapping:
       kind: ethereum/events
       apiVersion: 0.0.7
