:sparkles: `GardenCard` info from subgraph :sparkles: added chainId and members count

--- a/pkg/subgraph/src/templates/registryFactory.yaml
+++ b/pkg/subgraph/src/templates/registryFactory.yaml
@@ -1,6 +1,10 @@
 - kind: ethereum/contract
     name: {{name}}
     network: {{network}}
+    context:
+      chainId: 
+        type: Int
+        data: {{chainId}}
     source:
       address: "{{address}}"
       abi: {{name}}
